--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -195,13 +195,13 @@
         }
         //11.break문 
         //while문을 이용해서 1~20까지 출력
-        //{
-        //    let num = 1;    //
-        //    while( num <= 20 ){
-        //        document.write("실행되었습니다.");
-        //        num++;
-        //    }
-        //}
+        {
+            let num = 1;    //
+            while( num <= 20 ){
+            document.write("실행되었습니다.");
+                num++;
+            }
+        }
 
         //for문을 이용해서 1~20까지 출력
         {
