--- a/if_ex.html
+++ b/if_ex.html
@@ -4,42 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 기본 규칙</title>
-
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>자바스크립트 : 데이터 제어하기</title>
     <link rel="stylesheet" href="../assets/css/dracula.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <header id="header">
-        <h1><a href="../index.html">Javascript</a></h1>
+        <h1><a href="index.html">Javascript</a></h1>
         <nav class="header_nav">
             <ul>
-                <li><a href="../javascript01.html">데이터 저장하기</a></li>
-                <li><a href="../javascript02.html">데이터 불러오기</a></li>
-                <li><a href="../javascript03.html">데이터 실행하기</a></li>
-                <li><a href="../javascript04.html">데이터 제어하기</a></li>
-            </ul>
+                <li class="active"><a href="javascript01.html">데이터 저장하기</a></li>
+                <li><a href="javascript02.html">데이터 불러오기</a></li>
+                <li><a href="javascript03.html">데이터 실행하기</a></li>
+                <li><a href="javascript04.html">데이터 제어하기</a></li>
+            </ul>    
             <ul>
-                <li><a href="../javascript05.html">문자열 객체</a></li>
-                <li><a href="../javascript06.html">배열 객체</a></li>
-                <li><a href="../javascript07.html">수학 객체</a></li>
-                <li><a href="../javascript08.html">숫자 객체</a></li>
-                <li><a href="../javascript09.html">브라우저 객체</a></li>
-                <li><a href="../javascript10.html">요소 객체</a></li>
-                <li><a href="../javascript11.html">이벤트 객체</a></li>
+                <li><a href="javascript05.html">문자열 객체</a></li>
+                <li><a href="javascript06.html">배열 객체</a></li>
+                <li><a href="javascript07.html">수학 객체</a></li>
+                <li><a href="javascript08.html">숫자 객체</a></li>
+                <li><a href="javascript09.html">브라우저 객체</a></li>
+                <li><a href="javascript10.html">요소 객체</a></li>
+                <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="study">
                 <li><a href="basic.html">기본 규칙</a></li>
-                <li><a href="operator.html">연산자</a></li>
-                <li><a href="for.html">반목문</a></li>
-                <li><a href="if.html">조건문</a></li>
-                <li><a href="type.html">데이터타입</a></li>
-                <li><a href="fuction.html">함수</a></li>
-                <li><a href="var.html">지역변수/전역변수</a></li>
+                <li><a href="calculation.html">연산자</a></li>
+                <li><a href="for.html">반복문</a></li>
+                <li><a href="if.html">조건문</a></li>             
+                <li><a href="type.html">데이터 타입</a></li>  
+                <li><a href="function.html">함수</a></li>  
+                <li><a href="var.html">지역변수/전역변수</a></li>  
             </ul>
         </nav>
     </header>
-    <!-- //header -->
+    <!-- //header --> 
+
     <main id="main">
         <div class="main_menu">
             <ul>
