--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>자바스크립트 데이터 저장하기</title>
+      <title>자바스크립트 데이터 실행하기</title>
   
       <link rel="stylesheet" href="assets/css/style.css">
       <link rel="stylesheet" href="assets/css/dracula.css">
@@ -31,7 +31,7 @@
             <ul class="study">
                 <li><a href="study/basic.html">기본 규칙</a></li>
                 <li><a href="study/operator.html">연산자</a></li>
-                <li><a href="study/for.html">반목문</a></li>
+                <li><a href="study/for.html">반복문</a></li>
                 <li><a href="study/if.html">조건문</a></li>
                 <li><a href="study/type.html">데이터타입</a></li>
                 <li><a href="study/fuction.html">함수</a></li>
