--- a/javascript/study/for.html
+++ b/javascript/study/for.html
@@ -32,7 +32,7 @@
         <ul class="study">
             <li><a href="basic.html">기본 규칙</a></li>
             <li><a href="operator.html">연산자</a></li>
-            <li><a href="for.html">반목문</a></li>
+            <li><a href="for.html">반복문</a></li>
             <li><a href="if.html">조건문</a></li>
             <li><a href="type.html">데이터타입</a></li>
             <li><a href="fuction.html">함수</a></li>
@@ -358,7 +358,7 @@ document.write(table);
 </main>
 <!-- //main -->
 <footer id="footer">
-    <a href="mailto:piowm123@gmail.com">piowm123@gmail.com</a>
+    <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
 </footer>
 <!-- //footer -->
 <script src="../assets/js/highlight.min.js"></script>
