--- a/css/index.html
+++ b/css/index.html
@@ -3216,7 +3216,7 @@
                             </tr>
                             <tr>
                                 <td>282</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-block-end&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3224,7 +3224,7 @@
                             </tr>
                             <tr>
                                 <td>283</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-block-start&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3232,7 +3232,7 @@
                             </tr>
                             <tr>
                                 <td>284</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-bottom&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3240,7 +3240,8 @@
                             </tr>
                             <tr>
                                 <td>285</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-inline-end
+                                    &gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3248,7 +3249,8 @@
                             </tr>
                             <tr>
                                 <td>286</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-inline-start
+                                    &gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3256,7 +3258,7 @@
                             </tr>
                             <tr>
                                 <td>287</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-left&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3265,7 +3267,7 @@
 
                             <tr>
                                 <td>288</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-right&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3273,7 +3275,7 @@
                             </tr>
                             <tr>
                                 <td>289</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;padding-top&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3281,7 +3283,7 @@
                             </tr>
                             <tr>
                                 <td>290</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;page-break-after&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3289,7 +3291,8 @@
                             </tr>
                             <tr>
                                 <td>291</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;page-break-before
+                                    &gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3297,7 +3300,8 @@
                             </tr>
                             <tr>
                                 <td>292</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;page-break-inside
+                                    &gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3305,7 +3309,7 @@
                             </tr>
                             <tr>
                                 <td>293</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;perspective&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3313,7 +3317,7 @@
                             </tr>
                             <tr>
                                 <td>294</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;perspective-origin&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3321,7 +3325,7 @@
                             </tr>
                             <tr>
                                 <td>295</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;place-conten&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3329,7 +3333,8 @@
                             </tr>
                             <tr>
                                 <td>296</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;place-items
+                                    &gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3337,7 +3342,8 @@
                             </tr>
                             <tr>
                                 <td>297</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;place-self
+                                    &gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3345,7 +3351,7 @@
                             </tr>
                             <tr>
                                 <td>298</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;pointer-events&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3353,7 +3359,7 @@
                             </tr>
                             <tr>
                                 <td>299</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;position&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3361,7 +3367,8 @@
                             </tr>
                             <tr>
                                 <td>300</td>
-                                <td>&lt;&gt;</td>
+                                <td>&lt;print-color-adjust
+                                    &gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
@@ -3370,6 +3377,73 @@
 
                             <tr>
                                 <td>301</td>
+                                <td>&lt;quotes&gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>302</td>
+                                <td>&lt;resize&gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>303</td>
+                                <td>&lt;right
+                                    &gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>304</td>
+                                <td>&lt;rotate
+                                    &gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>305</td>
+                                <td>&lt;row-gap &gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>306</td>
+                                <td>&lt;ruby-align&gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>307</td>
+                                <td>&lt;ruby-position
+                                    &gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>308</td>
+                                <td>&lt;scale&gt;</td>
+                                <td></td>
+                                <td><a href="#">__</a></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>309</td>
                                 <td>&lt;&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
@@ -3377,7 +3451,7 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>37</td>
+                                <td>310</td>
                                 <td>&lt;&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
@@ -3385,7 +3459,7 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>37</td>
+                                <td>311</td>
                                 <td>&lt;&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
@@ -3393,71 +3467,7 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
-                                <td>&lt;&gt;</td>
-                                <td></td>
-                                <td><a href="#">__</a></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>37</td>
+                                <td>312</td>
                                 <td>&lt;&gt;</td>
                                 <td></td>
                                 <td><a href="#">__</a></td>
