--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -44,21 +44,57 @@
     <main id="main">
         <div class="main_menu"></div>
         <ul>
-            <li><a href="#sampe">01. if문</a></li>
-            <li><a href="#sampe">02. if문 생략 </a></li>
-            <li><a href="#sampe">03. 다중 if</a></li>
-            <li><a href="#sampe">04. 중첩 if</a></li>
-            <li><a href="#sampe">05. 삼항 연산자</a></li>
-            <li><a href="#sampe">06. swith문</a></li>
-            <li><a href="#sampe">07. whild문</a></li>
-            <li><a href="#sampe">08. do whild문</a></li>
-            <li><a href="#sampe">09. for문</a></li>
-            <li><a href="#sampe">10. 중첩 for문</a></li>
-            <li><a href="#sampe">11. break문</a></li>
-            <li><a href="#sampe">12. continue문</a></li>
+            <li><a href="#sampe01">01. if문</a></li>
+            <li><a href="#sampe02">02. if문 생략 </a></li>
+            <li><a href="#sampe03">03. 다중 if</a></li>
+            <li><a href="#sampe04">04. 중첩 if</a></li>
+            <li><a href="#sampe05">05. 삼항 연산자</a></li>
+            <li><a href="#sampe06">06. swith문</a></li>
+            <li><a href="#sampe07">07. whild문</a></li>
+            <li><a href="#sampe08">08. do whild문</a></li>
+            <li><a href="#sampe09">09. for문</a></li>
+            <li><a href="#sampe10">10. 중첩 for문</a></li>
+            <li><a href="#sampe11">11. break문</a></li>
+            <li><a href="#sampe12">12. continue문</a></li>
         </ul>
+
+        <hr>
+        <br>
+        <br>
+
         <div class="main_script"></div>
         <div class="main_desc"></div>
+        <h3>(제어문 : 조건문, 반복문, 중지, 건너뛰기)</h3>
+        <h3>01. if문</h3>
+                <p>
+                    //false, 0, undefined, null,""<br>
+                    //true, 1, "0", "1", 0<10, [], {})
+                </p>
+                <div class="script">
+<pre><code class="language-js">{
+    function func(){
+        document.write("함수가 실행되었습니다.1<br>");
+    }
+    func();
+}
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample01_result">
+                            함수가 실행되었습니다.1  
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample01 -->
+            <br>
+            <br>
+
+
+
+
     </main>
     <!-- //main -->
 
@@ -66,6 +102,12 @@
         <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
+
+    <script src="assets/js/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
+
     <script>
         //(제어문 : 조건문, 반복문, 중지, 건너뛰기)
         // 01. if문 
