--- a/javascript/javascript10.html
+++ b/javascript/javascript10.html
@@ -27,6 +27,15 @@
                 <li class="active"><a href="javascript10.html">요소 객체</a></li>
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
+            <ul class="effect">
+                <li><a href="effect/searchEffect01.html">검색효과</a></li>
+                <li><a href="effect/quizEffect01.html">퀴즈효과</a></li>
+                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
+                <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
+                <li><a href="effect/sliderEffect01.html">슬라이스효과</a></li>
+                <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
+                <li><a href="effect/gameEffect01.html">게임효과</a></li>
+            </ul>
             <ul class="study">
                 <li><a href="study/basic.html">기본 규칙</a></li>
                 <li><a href="study/operator.html">연산자</a></li>
@@ -41,7 +50,73 @@
     <!-- //header -->
 
     <main id="main">
-        <div class="main_menu"></div>
+       
+        <div class="main_menu">
+            <ul>
+                <li>
+                    <a href = "#">
+                        01. 요소메서드 : 선택자: document.querySelector() : 요소선택자
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        01. 요소메서드 : 선택자: document.querySelectorAll() : 모든 요소선택자
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        01. 요소메서드 : 선택자: document.getElementById() : 아이디 요소 선택자 
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        01. 요소메서드 : 선택자: document.getElementByClassName() : 클래스 요소 선택자
+                    </a>
+                </li>
+                <br>
+                <li>
+                    <a href = "#">
+                        01. 요소메서드 : 텍스트: innnerText() : 요소에 텍스트 설정하기
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        02. 요소메서드 : 텍스트: innnerContent() : 요소에 텍스트 설정하기
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        03. 요소메서드 : 텍스트: innnerHtml() : 요소에 텍스트(태그인식) 설정하기
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 요소메서드 : 텍스트: outerHtml() : 요소에 텍스트(태그인식) 설정하기
+                    </a>
+                </li>
+                <br>
+                <li>
+                    <a href = "#">
+                        04. 요소메서드 : 클래스: classList.add() : 클래스 추가하기
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 요소메서드 : 클래스: classList.remove() : 클래스 삭제하기
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 요소메서드 : 클래스: classList.toggle() :  클래스 추가/삭제하기
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 요소메서드 : 클래스: classList.contains() : 클래스 존재 여부 확인하기 
+                    </a>
+                </li>
+            </ul>
+        </div>
         <ul>
             <li><a href="#sampe">01. if문</a></li>
             <li><a href="#sampe">02. </a></li>
