--- a/javascript/javascript07.html
+++ b/javascript/javascript07.html
@@ -27,6 +27,15 @@
                 <li><a href="javascript10.html">요소 객체</a></li>
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
+            <ul class="effect">
+                <li><a href="effect/searchEffect01.html">검색효과</a></li>
+                <li><a href="effect/quizEffect01.html">퀴즈효과</a></li>
+                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
+                <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
+                <li><a href="effect/sliderEffect01.html">슬라이스효과</a></li>
+                <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
+                <li><a href="effect/gameEffect01.html">게임효과</a></li>
+            </ul>
             <ul class="study">
                 <li><a href="study/basic.html">기본 규칙</a></li>
                 <li><a href="study/operator.html">연산자</a></li>
