--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -27,6 +27,15 @@
                 <li><a href="javascript10.html">요소 객체</a></li>
                 <li class="active"><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
+            <ul class="effect">
+                <li><a href="effect/searchEffect01.html">검색효과</a></li>
+                <li><a href="effect/quizEffect01.html">퀴즈효과</a></li>
+                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
+                <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
+                <li><a href="effect/sliderEffect01.html">슬라이스효과</a></li>
+                <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
+                <li><a href="effect/gameEffect01.html">게임효과</a></li>
+            </ul>
             <ul class="study">
                 <li><a href="study/basic.html">기본 규칙</a></li>
                 <li><a href="study/operator.html">연산자</a></li>
@@ -41,21 +50,61 @@
     <!-- //header -->
 
     <main id="main">
-        <div class="main_menu"></div>
-        <ul>
-            <li><a href="#sampe">01. if문</a></li>
-            <li><a href="#sampe">02. </a></li>
-            <li><a href="#sampe">03</a></li>
-            <li><a href="#sampe">04</a></li>
-            <li><a href="#sampe">05</a></li>
-            <li><a href="#sampe">06</a></li>
-            <li><a href="#sampe">07</a></li>
-            <li><a href="#sampe">08</a></li>
-            <li><a href="#sampe">09</a></li>
-            <li><a href="#sampe">10</a></li>
-            <li><a href="#sampe">11. break문</a></li>
-            <li><a href="#sampe">12. continue문</a></li>
-        </ul>
+       
+        <div class="main_menu">
+            <ul>
+                <li>
+                    <a href = "#">
+                        01. 이벤트메서드 : addEventListener("click") : 클릭했을때
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        02. 이벤트메서드 : addEventListener("scroll"): 스크롤했을때
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        03. 이벤트메서드 : addEventListener("resize") : 브라우저 사이즈 변경됐을때
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 이벤트메서드 : addEventListener("selectstart") : 텍스트 선택을 시작했을때
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 이벤트메서드 : addEventListener("mousedown") : 마우스버튼을 눌렀을때
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 이벤트메서드 : addEventListener("mouseup") : 마우스버튼을 떼는 경우
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 이벤트메서드 : addEventListener("mousemove") : 마우스 움직이는 경우 
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 이벤트메서드 : addEventListener("drag") :  드래그 중인 경우
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 이벤트메서드 : addEventListener("dragstart") : 드래그 시작했울 때
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        04. 이벤트메서드 : addEventListener("dragend") : 드래그 끝났을 때
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="main_script"></div>
         <div class="main_desc"></div>
     </main>
