--- a/javascript/javascript10.html
+++ b/javascript/javascript10.html
@@ -53,68 +53,21 @@
        
         <div class="main_menu">
             <ul>
-                <li>
-                    <a href = "#">
-                        01. 요소메서드 : 선택자: document.querySelector() : 요소선택자
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        01. 요소메서드 : 선택자: document.querySelectorAll() : 모든 요소선택자
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        01. 요소메서드 : 선택자: document.getElementById() : 아이디 요소 선택자 
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        01. 요소메서드 : 선택자: document.getElementByClassName() : 클래스 요소 선택자
-                    </a>
+                <li><a href = "#">01. 요소메서드 : 선택자: document.querySelector() : 요소선택자</a></li>
+                <li><a href = "#">02. 요소메서드 : 선택자: document.querySelectorAll() : 모든 요소선택자</a></li>
+                <li><a href = "#">03. 요소메서드 : 선택자: document.getElementById() : 아이디 요소 선택자</a></li>
+                <li><a href = "#">04. 요소메서드 : 선택자: document.getElementByClassName() : 클래스 요소 선택자</a>
                 </li>
                 <br>
-                <li>
-                    <a href = "#">
-                        01. 요소메서드 : 텍스트: innnerText() : 요소에 텍스트 설정하기
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        02. 요소메서드 : 텍스트: innnerContent() : 요소에 텍스트 설정하기
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        03. 요소메서드 : 텍스트: innnerHtml() : 요소에 텍스트(태그인식) 설정하기
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 요소메서드 : 텍스트: outerHtml() : 요소에 텍스트(태그인식) 설정하기
-                    </a>
-                </li>
+                <li><a href = "#">01. 요소메서드 : 텍스트: innnerText() : 요소에 텍스트 설정하기</a></li>
+                <li><a href = "#">02. 요소메서드 : 텍스트: innnerContent() : 요소에 텍스트 설정하기</a></li>
+                <li><a href = "#">03. 요소메서드 : 텍스트: innnerHtml() : 요소에 텍스트(태그인식) 설정하기</a></li>
+                <li><a href = "#">04. 요소메서드 : 텍스트: outerHtml() : 요소에 텍스트(태그인식) 설정하기</a></li>
                 <br>
-                <li>
-                    <a href = "#">
-                        04. 요소메서드 : 클래스: classList.add() : 클래스 추가하기
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 요소메서드 : 클래스: classList.remove() : 클래스 삭제하기
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 요소메서드 : 클래스: classList.toggle() :  클래스 추가/삭제하기
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 요소메서드 : 클래스: classList.contains() : 클래스 존재 여부 확인하기 
-                    </a>
-                </li>
+                <li><a href = "#">04. 요소메서드 : 클래스: classList.add() : 클래스 추가하기</a></li>
+                <li><a href = "#">04. 요소메서드 : 클래스: classList.remove() : 클래스 삭제하기</a></li>
+                <li><a href = "#">04. 요소메서드 : 클래스: classList.toggle() :  클래스 추가/삭제하기</a></li>
+                <li><a href = "#">04. 요소메서드 : 클래스: classList.contains() : 클래스 존재 여부 확인하기</a></li>
             </ul>
         </div>
         <ul>
