--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -53,56 +53,16 @@
        
         <div class="main_menu">
             <ul>
-                <li>
-                    <a href = "#">
-                        01. 이벤트메서드 : addEventListener("click") : 클릭했을때
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        02. 이벤트메서드 : addEventListener("scroll"): 스크롤했을때
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        03. 이벤트메서드 : addEventListener("resize") : 브라우저 사이즈 변경됐을때
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 이벤트메서드 : addEventListener("selectstart") : 텍스트 선택을 시작했을때
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 이벤트메서드 : addEventListener("mousedown") : 마우스버튼을 눌렀을때
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 이벤트메서드 : addEventListener("mouseup") : 마우스버튼을 떼는 경우
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 이벤트메서드 : addEventListener("mousemove") : 마우스 움직이는 경우 
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 이벤트메서드 : addEventListener("drag") :  드래그 중인 경우
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 이벤트메서드 : addEventListener("dragstart") : 드래그 시작했울 때
-                    </a>
-                </li>
-                <li>
-                    <a href = "#">
-                        04. 이벤트메서드 : addEventListener("dragend") : 드래그 끝났을 때
-                    </a>
-                </li>
+                <li><a href = "#"> 01. 이벤트메서드 : addEventListener("click") : 클릭했을때</a></li>
+                <li><a href = "#">02. 이벤트메서드 : addEventListener("scroll"): 스크롤했을때</a></li>
+                <li><a href = "#">03. 이벤트메서드 : addEventListener("resize") : 브라우저 사이즈 변경됐을때</a></li>
+                <li><a href = "#">04. 이벤트메서드 : addEventListener("selectstart") : 텍스트 선택을 시작했을때</a></li>
+                <li><a href = "#">05. 이벤트메서드 : addEventListener("mousedown") : 마우스버튼을 눌렀을때</a></li>
+                <li><a href = "#">06. 이벤트메서드 : addEventListener("mouseup") : 마우스버튼을 떼는 경우</a></li>
+                <li><a href = "#">07. 이벤트메서드 : addEventListener("mousemove") : 마우스 움직이는 경우</a></li>
+                <li><a href = "#">04. 이벤트메서드 : addEventListener("drag") :  드래그 중인 경우</a></li>
+                <li><a href = "#">04. 이벤트메서드 : addEventListener("dragstart") : 드래그 시작했울 때</a></li>
+                <li><a href = "#"> 04. 이벤트메서드 : addEventListener("dragend") : 드래그 끝났을 때</a></li>
             </ul>
         </div>
         <div class="main_script"></div>
