--- a/javascript/study/operator.html
+++ b/javascript/study/operator.html
@@ -102,7 +102,8 @@
               ===       a === b, a와 b가 같고 데이터 타입도 같으면 true, 거짓이면 false가 됩니다. 
                        -> ex) 5 === '5'는 false가 나옵니다.
 
-              !==       a !== b, a와 b가 같지 않거나 데이터 타입이 같지 않으면 true, 같으면 false가 됩니다. 
+              !==       a !== b, a와 b가 같지 않거나 데이터 타입이 같지 않으면 true, 
+                        같으면 false가 됩니다. 
           </p></pre>
           <h3 class="t_tit2">논리 연산자</h3>
            <h4 class="t_tit3"></h4>&lt;논리 연산자의 종류&gt;</h4>
