--- a/css/index.html
+++ b/css/index.html
@@ -1122,7 +1122,7 @@
                             <tr>
                                 <td>14</td>
                                 <td>&lt;animation-timing-function&gt;</td>
-                                <td>각 주기의 지속 시간 동안 애니메이션이 진행되는 방식을 설정합니다</td>
+                                <td>애니메이션 움직임 속도 설정,각 주기의 지속 시간 동안 애니메이션이 진행되는 방식을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1164,7 +1164,7 @@
                             <tr>
                                 <td>18</td>
                                 <td>&lt;background&gt;</td>
-                                <td> 색상, 이미지, 원점 및 크기 또는 반복 방법과 같은 모든 배경 스타일 속성을 한 번에 설정합니다</td>
+                                <td>백그라운드 속성을 일괄적으로 설정,색상, 이미지, 원점 및 크기 또는 반복 방법과 같은 모든 배경 스타일 속성을 한 번에 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1172,7 +1172,7 @@
                             <tr>
                                 <td>19</td>
                                 <td>&lt;background-attachment&gt;</td>
-                                <td>배경 이미지의 위치가 뷰포트 내에서 고정되는지 또는 포함하는 블록과 함께 스크롤되는지 여부를 설정합니다</td>
+                                <td>배경이미지고정 여부 설정,배경 이미지의 위치가 뷰포트 내에서 고정되는지 또는 포함하는 블록과 함께 스크롤되는지 여부를 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1180,7 +1180,7 @@
                             <tr>
                                 <td>20</td>
                                 <td>&lt;background-blend-mode&gt;</td>
-                                <td>요소의 배경 이미지가 서로 그리고 요소의 배경색과 어떻게 혼합되어야 하는지를 설정합니다</td>
+                                <td>배경을 혼합했을 때 그래픽 효과 설정, 요소의 배경 이미지가 서로 그리고 요소의 배경색과 어떻게 혼합되어야 하는지를 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1188,7 +1188,7 @@
                             <tr>
                                 <td>21</td>
                                 <td>&lt;background-clip&gt;</td>
-                                <td>요소의 배경이 테두리 상자, 패딩 상자 또는 콘텐츠 상자 아래로 확장되는지 여부를 설정합니다</td>
+                                <td>배그라운드 이미지의 위치기준점 설정요소의 배경이 테두리 상자, 패딩 상자 또는 콘텐츠 상자 아래로 확장되는지 여부를 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1196,7 +1196,7 @@
                             <tr>
                                 <td>22</td>
                                 <td>&lt;background-color&gt;</td>
-                                <td>요소의 배경색을 설정합니다</td>
+                                <td>백그라운드 배경색 설정, 요소의 배경색을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1204,7 +1204,7 @@
                             <tr>
                                 <td>23</td>
                                 <td>&lt;background-image&gt;</td>
-                                <td>요소에 하나 이상의 배경 이미지를 설정합니다</td>
+                                <td>백그라운드 이미지 속성을 설정, 요소에 하나 이상의 배경 이미지를 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1212,7 +1212,7 @@
                             <tr>
                                 <td>24</td>
                                 <td>&lt;background-origin&gt;</td>
-                                <td></td>
+                                <td>백그라운드 이미지의 위치기준점을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1220,7 +1220,7 @@
                             <tr>
                                 <td>25</td>
                                 <td>&lt;background-position&gt;</td>
-                                <td></td>
+                                <td>백그라운드 이미지의 위치영역을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1228,7 +1228,7 @@
                             <tr>
                                 <td>26</td>
                                 <td>&lt;background-position-x&gt;</td>
-                                <td></td>
+                                <td>백그라운드 이미지의 X축 위치영역을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1236,7 +1236,7 @@
                             <tr>
                                 <td>27</td>
                                 <td>&lt;background-position-y&gt;</td>
-                                <td></td>
+                                <td>백그라운드 이미지의 Y축 위치영역을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1244,7 +1244,7 @@
                             <tr>
                                 <td>28</td>
                                 <td>&lt;background-repeat&gt;</td>
-                                <td></td>
+                                <td>백그라운드 이미지 반복 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1252,7 +1252,7 @@
                             <tr>
                                 <td>29</td>
                                 <td>&lt;background-size&gt;</td>
-                                <td></td>
+                                <td>백그라운드 이미지 사이지 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1276,7 +1276,7 @@
                             <tr>
                                 <td>32</td>
                                 <td>&lt;border&gt;</td>
-                                <td></td>
+                                <td>테두리 속성을 일괄적으로 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1380,7 +1380,7 @@
                             <tr>
                                 <td>45</td>
                                 <td>&lt;border-bottom&gt;</td>
-                                <td></td>
+                                <td>아래쪽 속성을 일괄적으로 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1388,7 +1388,7 @@
                             <tr>
                                 <td>46</td>
                                 <td>&lt;border-bottom-color&gt;</td>
-                                <td></td>
+                                <td>테두리 아래쪽 색속성을 일괄적으로 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1404,7 +1404,7 @@
                             <tr>
                                 <td>48</td>
                                 <td>&lt;border-bottom-right-radius&gt;</td>
-                                <td></td>
+                                <td>아래 왼쪽 모서리 굴곡을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1412,7 +1412,7 @@
                             <tr>
                                 <td>49</td>
                                 <td>&lt;border-bottom-style&gt;</td>
-                                <td></td>
+                                <td>테두리 아래 스타일 속성을 설정합니다</td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
@@ -1420,7 +1420,8 @@
                             <tr>
                                 <td>50</td>
                                 <td>&lt;border-bottom-width&gt;</td>
-                                <td></td>
+                                <td>테두리 아래 두께 속성을 설정합니다
+                                </td>
                                 <td><a href="#">__</a></td>
                                 <td></td>
                                 <td></td>
