--- a/javascript/javascript10.html
+++ b/javascript/javascript10.html
@@ -44,6 +44,7 @@
                 <li><a href="study/type.html">데이터타입</a></li>
                 <li><a href="study/fuction.html">함수</a></li>
                 <li><a href="study/var.html">지역변수/전역변수</a></li>
+                <li><a href="study/element.html">요소선택</a></li>
             </ul>
         </nav>
     </header>
@@ -57,6 +58,7 @@
                 <li><a href = "#">02. 요소메서드 : 선택자: document.querySelectorAll() : 모든 요소선택자</a></li>
                 <li><a href = "#">03. 요소메서드 : 선택자: document.getElementById() : 아이디 요소 선택자</a></li>
                 <li><a href = "#">04. 요소메서드 : 선택자: document.getElementByClassName() : 클래스 요소 선택자</a>
+                <li><a href = "#">04. 요소메서드 : 선택자: document.getElementByTagName() : 태그 요소 선택자</a>
                 </li>
                 <br>
                 <li><a href = "#">01. 요소메서드 : 텍스트: innnerText() : 요소에 텍스트 설정하기</a></li>
