--- a/javascript/effect/quizEffect03.html
+++ b/javascript/effect/quizEffect03.html
@@ -239,7 +239,7 @@
         //quizResult[3].textContent = quizInfo[3].answerResult;
 
         //for문
-        for(let i=0; i<4; i++){
+        for(let i=0; i<4; i++){ //i<quizInfo.length;
             quizType[i].textContent = quizInfo[i].answerType;  
             quizNumber[i].textContent = quizInfo[i].answerNum + ". ";
             quizAsk[i].textContent = quizInfo[i].answerAsk;
