--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -45,6 +45,7 @@
                 <li><a href="study/type.html">데이터타입</a></li>
                 <li><a href="study/fuction.html">함수</a></li>
                 <li><a href="study/var.html">지역변수/전역변수</a></li>
+                <li><a href="study/element.html">요소선택</a></li>
             </ul>
         </nav>
     </header>
