--- a/javascript/study/for.html
+++ b/javascript/study/for.html
@@ -9,11 +9,9 @@
     <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
 <body>
-  <header id="header">
-    <h1>
-        javascript
-    </h1>
-    <nav class="header_nav">
+    <header id="header">
+        <h1><a href="../index.html">Javascript</a></h1>
+        <nav class="header_nav">
         <ul>
             <li><a href="../javascript01.html">데이터 저장하기</a></li>
             <li><a href="../javascript02.html">데이터 불러오기</a></li>
